<resources>
    <string name="app_name">Project Noodle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_gallery_list_button_title">Videos</string>
    <string name="menu_user_button_title">User</string>
    <string name="text_user_hint">User name</string>
    <string name="text_password_hint">Password</string>
    <string name="text_login_button">Login</string>
    <string name="text_logo_fragment">Hello Noodle!</string>
    <string name="gallery_cell_thumb_image">gallery cell thumb image</string>
    <string name="video_controller_button_description">Video controller button</string>
    <string name="about_user_text_default">no user data</string>
    <string name="logo_page_text">Project Noodle v0.0.1</string>
    <string name="sign_up">sign up</string>
    <string name="sign_up_confirm">sign up</string>
    <string name="sign_up_password_hint">new password</string>
    <string name="sign_up_confirm_password_hint">confirm password</string>
    <string name="sign_up_email_hint">email address</string>
    <string name="sign_up_user_name_hint">new username</string>
</resources>